fix: issue with date-picker was not fully resolved on safari, now ok

--- a/safe-online-webapp-base-olas/src/main/webapp/css/style.css
+++ b/safe-online-webapp-base-olas/src/main/webapp/css/style.css
@@ -708,6 +708,7 @@ table.rich-shuttle-body table {
 }
 .date_label {
     display: inline;
+    margin-left: 0px;
 }
 }
 
